--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ Version: 1.0.0
 /*------------------- 1.2. Function -------------------*/
 /*------------------- 1.3. Variable-------------------*/
 :root {
-  --theme-color: #1C2D37;
+  --theme-color: #1A1A1A;
   --theme-color2: #EED26E;
   --title-color: #0D0D0C;
   --title-dark: #364440;
