--- a/assets/sass/base/_variable.scss
+++ b/assets/sass/base/_variable.scss
@@ -1,71 +1,71 @@
 :root {
-  --theme-color         : #1C2D37;
-  --theme-color2        : #EED26E;
-  --title-color         : #0D0D0C;
-  --title-dark          : #364440;
-  --body-color          : #6E7070;
-  --smoke-color         : #C0CDD1;
-  --smoke-color2        : #666666;
-  --smoke-color3        : #C2D6C2;
-  --black-color         : #000000;
-  --black-color2        : #1B1B1B;
-  --black-color3        : #1A1A1A;
-  --gray-color          : #DDE8DD;
-  --gray-color2         : #E5E4E9;
-  --gray-color3         : #F3F5F6;
-  --white-color         : #ffffff;
-  --light-color         : #A4B5BA;
-  --yellow-color        : #E2B93B;
-  --success-color       : #27AE60;
-  --error-color         : #EB5757;
-  --th-border-color     : #CDCDCD;
-  --th-border-color2    : #E6E6E6;
-  --title-font          : "Outfit", sans-serif;
-  --body-font           : "Inter", sans-serif;
-  --icon-font           : "Font Awesome 6 Pro";
-  --main-container      : 1296px;
-  --container-gutters   : 24px;
-  --section-space       : 120px;
+  --theme-color: #1A1A1A;
+  --theme-color2: #eed26e;
+  --title-color: #0d0d0c;
+  --title-dark: #364440;
+  --body-color: #6e7070;
+  --smoke-color: #c0cdd1;
+  --smoke-color2: #666666;
+  --smoke-color3: #c2d6c2;
+  --black-color: #000000;
+  --black-color2: #1b1b1b;
+  --black-color3: #1a1a1a;
+  --gray-color: #dde8dd;
+  --gray-color2: #e5e4e9;
+  --gray-color3: #f3f5f6;
+  --white-color: #ffffff;
+  --light-color: #a4b5ba;
+  --yellow-color: #e2b93b;
+  --success-color: #27ae60;
+  --error-color: #eb5757;
+  --th-border-color: #cdcdcd;
+  --th-border-color2: #e6e6e6;
+  --title-font: "Outfit", sans-serif;
+  --body-font: "Inter", sans-serif;
+  --icon-font: "Font Awesome 6 Pro";
+  --main-container: 1296px;
+  --container-gutters: 24px;
+  --section-space: 120px;
   --section-space-mobile: 80px;
-  --section-title-space : 60px;
-  --ripple-ani-duration : 5s;
-  --th-body-background  : #ffffff;
+  --section-title-space: 60px;
+  --ripple-ani-duration: 5s;
+  --th-body-background: #ffffff;
 }
 
 // Color Variation
-$theme-color          : var(--theme-color);
-$theme-color2         : var(--theme-color2);
-$title-color          : var(--title-color);
-$title-dark           : var(--title-dark);
-$body-color           : var(--body-color);
-$smoke-color          : var(--smoke-color);
-$smoke-color2         : var(--smoke-color2);
-$smoke-color3         : var(--smoke-color3);
-$white-color          : var(--white-color);
-$light-color          : var(--light-color);
-$black-color          : var(--black-color);
-$black-color2         : var(--black-color2);
-$black-color3         : var(--black-color3);
-$gray-color           : var(--gray-color);
-$gray-color2          : var(--gray-color2);
-$gray-color3          : var(--gray-color3);
-$yellow-color         : var(--yellow-color);
-$success-color        : var(--success-color);
-$error-color          : var(--error-color);
-$border-color         : var(--th-border-color);
-$border-color2        : var(--th-border-color2);
-$body-background      : var(--th-body-background);
+$theme-color: var(--theme-color);
+$theme-color2: var(--theme-color2);
+$title-color: var(--title-color);
+$title-dark: var(--title-dark);
+$body-color: var(--body-color);
+$smoke-color: var(--smoke-color);
+$smoke-color2: var(--smoke-color2);
+$smoke-color3: var(--smoke-color3);
+$white-color: var(--white-color);
+$light-color: var(--light-color);
+$black-color: var(--black-color);
+$black-color2: var(--black-color2);
+$black-color3: var(--black-color3);
+$gray-color: var(--gray-color);
+$gray-color2: var(--gray-color2);
+$gray-color3: var(--gray-color3);
+$yellow-color: var(--yellow-color);
+$success-color: var(--success-color);
+$error-color: var(--error-color);
+$border-color: var(--th-border-color);
+$border-color2: var(--th-border-color2);
+$body-background: var(--th-body-background);
 
 // Font Variation
-$icon-font   : var(--icon-font);
+$icon-font: var(--icon-font);
 
 // Typography
-$title-font      : var(--title-font);
-$body-font       : var(--body-font);
-$body-font-size  : 16px;
+$title-font: var(--title-font);
+$body-font: var(--body-font);
+$body-font-size: 16px;
 $body-line-Height: 26px;
 $body-font-weight: 400;
-$p-line-Height   : 1.75;
+$p-line-Height: 1.75;
 
 // Device Variation
 $hd: 1921px; // Large Device Than 1920
@@ -82,66 +82,74 @@ $vxs: 375px; // Extra Small Device
 $space-count: 10;
 
 // Section Space  For large Device
-$space         : var(--section-space);
-$space-extra   : calc(var(--section-space) - 30px);
-$space-extra2   : calc(var(--section-space) - 40px);
+$space: var(--section-space);
+$space-extra: calc(var(--section-space) - 30px);
+$space-extra2: calc(var(--section-space) - 40px);
 
 // Section Space On small Device
-$space-mobile         : var(--section-space-mobile);
+$space-mobile: var(--section-space-mobile);
 $space-mobile-extra: calc(var(--section-space-mobile) - 30px);
 
+// BG Color Mapping
+$bgcolorMap: ();
+$bgcolorMap: map-merge(
+  (
+    "theme": $theme-color,
+    "theme2": $theme-color2,
+    "smoke": $smoke-color,
+    "smoke2": $smoke-color2,
+    "gray": $gray-color,
+    "gray2": $gray-color2,
+    "gray3": $gray-color3,
+    "light": $light-color,
+    "white": $white-color,
+    "black": $black-color,
+    "black2": $black-color2,
+    "black3": $black-color3,
+    "title": $title-color,
+    "title-dark": $title-dark,
+  ),
+  $bgcolorMap
+);
 
-// BG Color Mapping 
-$bgcolorMap  : ();
-$bgcolorMap  : map-merge((
-  "theme"    : $theme-color,
-  "theme2"   : $theme-color2,
-  "smoke"    : $smoke-color,
-  "smoke2"   : $smoke-color2,
-  "gray"     : $gray-color,
-  "gray2"    : $gray-color2,
-  "gray3"    : $gray-color3,
-  "light"    : $light-color,
-  "white"    : $white-color,
-  "black"    : $black-color,
-  "black2"   : $black-color2,
-  "black3"   : $black-color3,
-  "title"    : $title-color,
-  "title-dark"    : $title-dark,
-), $bgcolorMap);
+// Overlay Color Mapping
+$overlaycolorMap: ();
+$overlaycolorMap: map-merge(
+  (
+    "theme": $theme-color,
+    "title": $title-color,
+    "smoke": $smoke-color,
+    "white": $white-color,
+    "black": $black-color,
+    "overlay1": #080e1c,
+  ),
+  $overlaycolorMap
+);
 
+// Text Color Mapping
+$textColorsMap: ();
+$textColorsMap: map-merge(
+  (
+    "theme": $theme-color,
+    "theme2": $theme-color2,
+    "title": $title-color,
+    "body": $body-color,
+    "white": $white-color,
+    "light": $light-color,
+    "yellow": $yellow-color,
+    "success": $success-color,
+    "error": $error-color,
+  ),
+  $textColorsMap
+);
 
-// Overlay Color Mapping 
-$overlaycolorMap : ();
-$overlaycolorMap : map-merge((
-  "theme"        : $theme-color,
-  "title"        : $title-color,
-  "smoke"        : $smoke-color,
-  "white"        : $white-color,
-  "black"        : $black-color,
-  "overlay1"     : #080E1C,
-), $overlaycolorMap);
-
-
-// Text Color Mapping 
-$textColorsMap : ();
-$textColorsMap : map-merge((
-  "theme"      : $theme-color,
-  "theme2"     : $theme-color2,
-  "title"      : $title-color,
-  "body"       : $body-color,
-  "white"      : $white-color,
-  "light"      : $light-color,
-  "yellow"     : $yellow-color,
-  "success"    : $success-color,
-  "error"      : $error-color
-), $textColorsMap);
-
-
-// Font Mapping 
-$fontsMap    : ();
-$fontsMap    : map-merge((
-  "icon"     : $icon-font,
-  "title"    : $title-font,
-  "body"     : $body-font,
-), $fontsMap);
+// Font Mapping
+$fontsMap: ();
+$fontsMap: map-merge(
+  (
+    "icon": $icon-font,
+    "title": $title-font,
+    "body": $body-font,
+  ),
+  $fontsMap
+);
