--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ Version: 1.0.0
 /*------------------- 1.3. Variable-------------------*/
 :root {
   --theme-color: #1A1A1A;
-  --theme-color2: #EED26E;
+  --theme-color2: #BF7840;
   --title-color: #0D0D0C;
   --title-dark: #364440;
   --body-color: #6E7070;
@@ -12022,10 +12022,10 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
   /* Extra small devices */
 }
 
-.hero-1 .hero-slider1 .hero-inner .th-hero-bg {
+/* .hero-1 .hero-slider1 .hero-inner .th-hero-bg {
   -webkit-animation: scalein 20s infinite;
           animation: scalein 20s infinite;
-}
+} */
 
 .hero-1 .hero-slider1 .hero-inner .th-hero-bg:after {
   content: '';
