--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11918,18 +11918,26 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
   position: relative;
   z-index: 2;
   overflow: hidden;
+  width: 100%;
 }
 
 .th-hero-bg {
   position: absolute;
   inset: 0;
   z-index: -1;
+  height: 100%;
+  width: 100%;
+}
+.th-hero-bg {
+  aspect-ratio: 16/9; /* Adjust as needed */
 }
 
 .th-hero-bg img {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  object-position: center;
+  display: block;
 }
 
 /* Hero 1 ---------------------------------- */
@@ -11947,12 +11955,15 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
   padding-top: 120px;
   margin-top: -1px;
   position: relative;
+  min-height: 100vh;
   /* Medium devices */
 }
 
 @media (max-width: 991px) {
   .hero-1 {
     padding-top: 110px;
+    min-height: auto;
+    padding-bottom: 60px;
   }
 }
 
@@ -12011,6 +12022,8 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
       -ms-transform: translate(0, 165px);
           transform: translate(0, 165px);
   margin-top: -165px;
+  height: calc(100vh - 165px); /* Adjust height based on viewport */
+  min-height: 700px;
   /* Extra large devices */
   /* Medium Large devices */
   /* Medium devices */
@@ -12022,6 +12035,7 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
           mask-size: 100% 100%;
   /* Extra small devices */
 }
+
 
 /* .hero-1 .hero-slider1 .hero-inner .th-hero-bg {
   -webkit-animation: scalein 20s infinite;
@@ -12089,6 +12103,9 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
   .hero-1 .hero-slider1 {
     margin-left: 70px;
     margin-right: 70px;
+    height: auto;
+    transform: none;
+    margin-top: 0;
   }
 }
 
@@ -12097,6 +12114,7 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
     margin-left: 35px;
     margin-right: 35px;
     border-radius: 20px 0 20px 20px;
+    min-height: 500px;
   }
 }
 
@@ -12105,6 +12123,13 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
     margin-left: 15px;
     margin-right: 15px;
     border-radius: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .hero-1 .hero-slider1 {
+    margin-left: 20px;
+    margin-right: 20px;
+    min-height: 400px;
   }
 }
 
@@ -12609,14 +12634,14 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
     height: 300px;
   }
   .hero-style2 .hero-text {
-    font-size: 16px;
+    font-size: 0.9rem;
   }
 }
 
 /* Extra small devices */
 @media (max-width: 375px) {
   .hero-style2 .hero-title {
-    font-size: 38px;
+    font-size: 2rem;
   }
 }
 
