--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20136,6 +20136,8 @@ span.select2-selection.select2-selection--single:focus {
 .service-card .service-card-icon img {
   -webkit-transition: 0.4s;
   transition: 0.4s;
+  border: 1px solid var(--white-color);
+  border-radius: 5px;
 }
 
 .service-card .box-title {
@@ -21723,7 +21725,7 @@ span.select2-selection.select2-selection--single:focus {
 .video-box1 img {
   height: 100%;
   object-fit: cover;
-  object-position: right;
+  /* object-position: right; */
 }
 
 .video-box1 .play-btn {
@@ -22339,7 +22341,11 @@ span.select2-selection.select2-selection--single:focus {
 }
 
 .property-card-wrap .property-thumb img {
-  -webkit-transition: 0.4s;
+  width: 100%;
+  height: 50vh;
+  max-width: 100%;
+  display: block;
+  object-fit: cover; 
   transition: 0.4s;
 }
 
@@ -22349,9 +22355,10 @@ span.select2-selection.select2-selection--single:focus {
     display: block;
   }
   .property-card-wrap .property-thumb img {
-    width: 100%;
+    height: auto; /* Responsive height */
   }
 }
+
 
 .property-card-wrap:nth-of-type(odd) {
   -webkit-box-orient: horizontal;
