change in the image which was flikering on scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,8 @@ html,
 body {
   scroll-behavior: auto !important;
   overflow-x: hidden;
+  overscroll-behavior: none; 
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
